# pld

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  linker.rs  main.rs  option.rs
src/linker/: base.rs  static_linker.rs
tests/: link_test.rs
