[package]
name = "pld"
version = "0.1.45"
authors = ["Drumato <drumatech109@gmail.com>"]
edition = "2018"
license = "MIT"
description = "x86_64 static linker"
documentation = "https://docs.rs/pld"
homepage = "https://github.com/Drumato/pld"
repository = "https://github.com/Drumato/pld"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf-utilities = {version = "0.2.4"}
